--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alluvium Services
-logo: ![logo](/Alluvium-Services-Plus.png)
+logo: /test2/Alluvium-Services-Plus.png
 description: Medical Billing Services
 show_downloads: false
 theme: jekyll-theme-minimal
