--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Alluvium Services
 
 description: Medical Billing Services
 
-logo: /test2/Alluvium-Services-Plus.png
+logo: /Alluvium-Services-Plus.png
 
 
 show_downloads: false
