--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Alluvium Services
 
-description: Medical Billing Services
+#description: Medical Billing Services
 
 logo: /Alluvium-Services-Plus.png
 
